testsuite/tests/properties/invalid_is_null/test.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}

class FooNode implements Node[FooNode] {
    fun p(rc: RefCategories): Bool = rc.is_null
}

class Example: FooNode implements TokenNode {
}
